Fortran/IBM/execute/F2008/intrinsics/error/unit_tests/erf01.scenario
#BEGINSCENARIO
#BEGINDOC
#NAME=F2008/intrinsics/error/unit_tests/erf01.scenario
#FEATURE = ERF and ERFC are now part of F2008
#CREATOR = Rafik Zurob
#DATE    = 20110302
#TEST_TYPE=unit
#ENDDOC

#BEGINENV
#INVALID_XOPTS  = $(F_COMPILE^OPT_OPTIMIZE_FOR_SMP) $(F_COMPILE^OPT_OPTIMIZE_FOR_SMP_NOOPT)
#BEGINDEFS
#ENDDEFS
#ENDENV

#BEGINCONTROL

#CMD       = XLF2008_COMPILE
#INPUT     = $(tcasedir)erf01.f
#OPTS      = $(OPT_SET_LANG_LEVEL<2008std>)
#OUTPUT    = erf01$(OBJ)
#STDERR    = erf01.err
#ENDCMD

#CMD       = XLDIFF
#INPUT     = $($(tcasedir)erf01$(product)vf) erf01.err
#ENDCMD

#CMD       = F_LINK
#INPUT     = erf01$(OBJ)
#OUTPUT    = erf01$(EXE)
#ENDCMD

#CMD       = RUN
#INPUT     = erf01$(EXE)
#ENDCMD

#ENDCONTROL
#ENDSCENARIO
